# dc3dfwd-mg

./: .gitignore  CMakeLists.txt  README.md
docs/: configuration_file.md  data_file.md  model_files.md  response_file.md
examples/3-layers-model/: AMG-global-refinement.prm  GMG-global-refinement.prm  README.md  mkmdl.py
examples/halfspace-different-order/: GMG-adaptive-refinement-1.prm  GMG-adaptive-refinement-3.prm  GMG-global-refinement-1.prm  GMG-global-refinement-3.prm  README.md  mkmdl.py
examples/halfspace-different-stretch-factor/: README.md  halfspace.prm  mkmdl.py
examples/test-for-parallel/: README.md  halfspace.prm  mkmdl.py
src/: CMakeLists.txt  dc3dfwd.cc  dc_problem.cc  dc_problem.h  settings.cc  settings.h  solvers.cc  tria_finder.cc  tria_finder.h
